# agent-creator-autogen

./: .gitignore  Dockerfile  README.md  agent.py  creator.py  messages.py  metrics.py  pyproject.toml  run_sandbox.sh  validator.py  world.py
assessments/: assessment_1.md  assessment_10.md  assessment_2.md  assessment_3.md  assessment_4.md  assessment_5.md  assessment_6.md  assessment_7.md  assessment_8.md  assessment_9.md  execution_metrics.json
