[project]
name = "agent-creator-autogen"
version = "0.1.0"
description = "Auto generation of agents for the defense industry using AutoGen agents"
authors = [
    { name = "Pablo Martínez Agulló", email = "pablo.martinez.agullo@gmail.com" }
]
license = { text = "GNU General Public License (GPL) 3.0" }

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-core>=0.4.0",
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "python-dotenv>=1.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

